fix:landing page ui (#220)
Signed-off-by: jackHU1998 <92803130+jackHU1998@users.noreply.github.com>

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -124,6 +124,10 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
   }
 }
 
+.navbar__brand{
+  margin-top: 0.13rem;
+}
+
 .navbar__title {
   font-family: HFPopin;
   font-size: 1.3rem;
